src/test/deca/syntax/invalid/stringSimple.deca
// Description:
//    String simple
//
// Resultats:
//    token recognition error at: '''


//
// Historique:
//    cree le 11/01/2024


{

println('Obito Uchiwa');

}